<resources>
    <string name="app_name">SharedViewModel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quantity">Quantity</string>
    <string name="delivery_courier">Delivery Courier</string>
    <string name="select_recommended_courier">Select recommended courier</string>
    <string name="send">send</string>
    <string name="cancel">cancel</string>

    <string name="pie">pie</string>
    <string name="nougat">nougat</string>
    <string name="oreo">oreo</string>

    <string name="jne">jne</string>
    <string name="jnt">jnt</string>
    <string name="cargo">cargo</string>
    <string name="next">Next</string>
    <string name="back">back</string>
    <string name="six">SIX</string>
    <string name="four">FOUR</string>
    <string name="two">TWO</string>
    <string name="select_the_available_order_quantity">Select the available order quantity</string>
    <string name="courier">Courier</string>

    <string name="total">Total %s</string>
    <string name="confirmation">Confirm your order</string>

</resources>